--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{background-color: rgb(248, 245, 245);
 
 .parent{
 width: auto;
-height: 1450px;
+height: 1500px;
 /*border: 5px solid orange;*/
 background-color: rgb(248, 245, 245);
 display: flex;
@@ -31,7 +31,7 @@ margin: 0px 0px 0px 0px;
 }
 .child2{
 width: 270px;
-height: 150px;
+height: auto;
 background-color: rgb(246, 253, 251);
 }
 .child3{
@@ -298,7 +298,7 @@ margin: 10px 5px 10px 20px;
 
  .parent1{
     width: auto;
-    height: 1600px;
+    height: 1900px;
    /* border: 5px solid orange;*/
     background-color: rgb(248, 245, 245);
     display: flex;
